# Galois

./: .gitignore  CMakeLists.txt
libgalois/src/: HWTopoLinux.cpp
lonestar/analytics/cpu/sssp/: CMakeLists.txt  SSSP.cpp
lonestar/liblonestar/include/Lonestar/: BFS_SSSP.h
lonestar/liblonestar/src/: BoilerPlate.cpp
tools/graph-convert/: graph-convert.cpp
